# cot-suite

./: .env.example  .gitignore  .pre-commit-config.yaml  AUDIT.md  BLOCKERS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.md  ROADMAP.md  RUN.md  WRITEUP.md  mkdocs.yml  pyproject.toml
.claude/skills/no-eager-stop/: SKILL.md
.claude/skills/pause-on-precondition/: SKILL.md
.claude/skills/recon-plan-gate-execute/: SKILL.md
.claude/skills/reproduction-claim-discipline/: SKILL.md
.claude/skills/worktree-truth/: SKILL.md
.github/workflows/: benchmark_nightly.yml  ci.yml  docs.yml  release.yml
LICENSES/: Apache-2.0-monitorability-evals.txt  MIT-chainscope.txt
benchmarks/results/: multi_family_summary.md  rejudge_v2_normalized_summary.json  rejudge_v2_summary.json  scaling_summary.md  turpin_stage_b_summary.json
benchmarks/results/ds_r1_distill_llama_70b_full/: post_hoc_rationalization.jsonl  post_hoc_rationalization_v2.jsonl  summary.json
benchmarks/results/ds_r1_distill_qwen_14b_full/: post_hoc_rationalization.jsonl  post_hoc_rationalization_v2.jsonl  summary.json
benchmarks/results/ez_cross_judge/: degeneracy_reanalysis.json  kappa_summary.json
benchmarks/results/llama31_8b_instruct_full/: post_hoc_rationalization.jsonl  post_hoc_rationalization_v2.jsonl  summary.json
benchmarks/results/qwen25_72b_instruct_full/: adjudication_dump.txt  post_hoc_rationalization.jsonl  post_hoc_rationalization_v2.jsonl  results.jsonl  summary.json
benchmarks/results/qwen25_7b_instruct_full/: post_hoc_rationalization.jsonl  post_hoc_rationalization_v2.jsonl  results.jsonl  summary.json
benchmarks/results/qwen3_14b_gpqa_dryrun/: results.jsonl  summary.json
benchmarks/results/qwen3_14b_gpqa_full/: RUN.md  adjudication_dump.txt  detector_ablation.json  post_hoc_rationalization.jsonl  post_hoc_rationalization_v2.jsonl  summary.json
benchmarks/results/qwen3_32b_gpqa_full/: post_hoc_rationalization.jsonl  post_hoc_rationalization_v2.jsonl  summary.json
benchmarks/results/qwen3_8b_gpqa_full/: post_hoc_rationalization.jsonl  post_hoc_rationalization_v2.jsonl  summary.json
docs/: autorater-notes.md  citation.md  cross_judge_degeneracy.md  index.md  inspect.md  inspect_ai_integration_assessment.md  migration.md  path-d-plan.md  quickstart.md  related-work.md  related_work.md  reproducibility.md  roadmap.md  scaling.md
docs/metrics/: arcuschin.md  chen.md  emmons-zimmermann.md  index.md  lanham.md  turpin.md
docs/paper-refs/: 2510.23966-appendix-c.md
results/: figures.py
scripts/: ablate_phr_detectors.py  bootstrap_phr_ci.py  degeneracy_reanalysis_ez.py  ez_cross_judge.py  fix_deepseek_split.py  materialize_v2_normalized.py  modal_deepseek_r1_distill_llama_70b.py  modal_deepseek_r1_distill_qwen_14b.py  modal_detached_driver.py  modal_llama31_8b.py  modal_qwen25_72b_instruct.py  modal_qwen25_7b_instruct.py  modal_qwen3_14b.py  modal_qwen3_32b.py  modal_qwen3_8b.py  re_rate_unrated.py  reconstruct_options.py  rejudge_phr_full.py  rejudge_phr_pilot.py  resync_gmean.py  run_gemini_cross_rater.py  run_post_hoc_rationalization.py  run_qwen3_gpqa.py  scan_cot_answer_divergence.py  validate_b1_lanham.py  validate_b2_turpin.py  validate_b2_turpin_smoke.py  validate_b2_turpin_stage_a.py  validate_b2_turpin_stage_b.py  validate_b3_chen.py  validate_b4_arcuschin.py  validate_b4_iphr_reproduction.py  verify_headline.py  verify_keys.py
src/cotdiv/: __init__.py  cli.py
src/cotdiv/adapters/: __init__.py  anthropic_messages.py  openai_messages.py
src/cotdiv/autoraters/: __init__.py  legibility_coverage.py
src/cotdiv/benchmarks/: __init__.py
src/cotdiv/core/: __init__.py  classify.py  provenance.py  registry.py  schemas.py  trajectory.py
src/cotdiv/inspect/: __init__.py
src/cotdiv/metrics/: __init__.py  verbosity.py
src/cotdiv/models/: __init__.py  clients.py
src/cotdiv/tests/: _cue_judge.py  chen_cue_injection.py  turpin_counterfactual.py
src/cotmon/: __init__.py  cli.py  verify_keys.py
src/cotmon/adapters/: __init__.py  anthropic_messages.py  openai_messages.py
src/cotmon/autoraters/: __init__.py  legibility_coverage.py
src/cotmon/core/: __init__.py  classify.py  provenance.py  registry.py  schemas.py  trajectory.py
src/cotmon/metrics/: __init__.py  verbosity.py
src/cotmon/models/: __init__.py
src/cotmon/tests/: _cue_judge.py  chen_cue_injection.py  post_hoc_rationalization.py  turpin_counterfactual.py
src/cotsuite/: __init__.py  cli.py  normalize_cot.py  parsing.py  verify_keys.py
src/cotsuite/activations/: __init__.py
src/cotsuite/adapters/: __init__.py  anthropic_messages.py  openai_messages.py
src/cotsuite/autoraters/: __init__.py  legibility_coverage.py
src/cotsuite/core/: __init__.py  classify.py  provenance.py  (+3 more)
tests/: conftest.py  test_adapters.py  test_appendix_c_prompt_integrity.py  test_autorater_parsing.py  test_b2_stage_b_apparatus.py  test_b4_persistence.py  test_chen_inspect_scorer.py  test_classify_and_surface.py  test_cotdiv_deprecation_shim.py  test_cotmon_deprecation_shim.py  test_degradation.py  test_gmean_inspect_adapter.py  test_gmean_vendored.py  test_inspect_integration.py  test_integration_smoke.py  test_iphr.py  test_judges_backward_compat.py  test_kappa.py  test_lanham_early_answering.py  test_lanham_early_answering_inspect.py  test_lanham_mistake_injection.py  test_lanham_paraphrasing_filler.py  test_multi_judge.py  test_normalize_cot.py  test_openai_compatible_client.py  test_parser_bug_diagnosis.py  test_post_hoc_rationalization.py  test_ranking_reversal.py  test_resync_gmean.py  test_trajectory.py  test_turpin_chen.py  test_turpin_inspect_scorer.py
validation/: arcuschin_2503.08679.md  b1_lanham_raw.jsonl  b2_turpin_raw.jsonl  b2_turpin_stage_a_results.json  b4_arcuschin_raw.jsonl  b4_arcuschin_raw_2026-04-23_credit_exhaustion.jsonl  b4_arcuschin_raw_v2.jsonl  b4_iphr_reproduction_results.json  chen_2505.05410.md  emmons_2510.23966.md  lanham_2307.13702.md  turpin_2305.04388.md
validation/chainscope_iphr/: PROVENANCE.md
validation/turpin_artifacts/: bbh_analysis_baseline_output.txt
(+75 files in other folders)
