[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "cot-monitor"
version = "0.1.0"
description = "Chain-of-thought monitorability and faithfulness evaluation for reasoning-model agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "cot-monitor contributors" }]
keywords = [
  "ai-safety",
  "chain-of-thought",
  "monitorability",
  "faithfulness",
  "interpretability",
  "inspect-ai",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "inspect-ai>=0.3.199",
  "anthropic>=0.40",
  "openai>=2.8",
  "google-genai>=1.0",
  "pydantic>=2.8",
  "httpx>=0.27",
  "tenacity>=9.0",
  "typer>=0.12",
  "rich>=13.7",
  "numpy>=1.26",
  "datasets>=2.20",
]

[project.optional-dependencies]
nlp = ["nltk>=3.9"]
langgraph = ["langgraph>=0.2", "langchain-core>=0.3"]
activations = ["transformers>=4.44", "nnsight>=0.3", "transformer-lens>=2.4"]
open-weights = ["vllm>=0.6", "torch>=2.4"]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "pre-commit>=3.8",
  "mkdocs-material>=9.5",
  "hypothesis>=6.100",
]

[project.scripts]
# Primary entry point (post-rename 2026-04-21).
cotmon = "cotmon.cli:app"
# Legacy alias kept for 90 days after rename. Emits DeprecationWarning.
cotdiv = "cotdiv.cli:app"

[project.urls]
Homepage = "https://github.com/thenerd31/cot-divergence"
Repository = "https://github.com/thenerd31/cot-divergence"
Issues = "https://github.com/thenerd31/cot-divergence/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cotmon", "src/cotdiv"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "N", "A", "C4", "PT", "RET", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["vllm.*", "nnsight.*", "transformer_lens.*", "datasets.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --cov=cotdiv --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "slow: marks tests requiring API calls or GPU",
  "integration: end-to-end benchmark tests",
]
