[build-system]
requires = ["hatchling>=1.24", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "cot-suite"
dynamic = ["version"]
description = "Chain-of-thought monitorability and faithfulness evaluation for reasoning-model agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "cot-suite contributors" }]
keywords = [
  "ai-safety",
  "chain-of-thought",
  "monitorability",
  "faithfulness",
  "interpretability",
  "inspect-ai",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "inspect-ai>=0.3.199",
  "anthropic>=0.40",
  "openai>=2.8",
  "google-genai>=1.0",
  "pydantic>=2.8",
  "httpx>=0.27",
  "tenacity>=9.0",
  "typer>=0.12",
  "rich>=13.7",
  "numpy>=1.26",
  "datasets>=2.20",
  "pandas>=2.0",
  "tqdm>=4.65",
]

[project.optional-dependencies]
nlp = ["nltk>=3.9"]
langgraph = ["langgraph>=0.2", "langchain-core>=0.3"]
activations = ["transformers>=4.44", "nnsight>=0.3", "transformer-lens>=2.4"]
open-weights = ["vllm>=0.6", "torch>=2.4"]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "pytest-xdist>=3.6",
  "ruff>=0.6",
  "mypy>=1.11",
  "pre-commit>=3.8",
  "mkdocs-material>=9.5",
  "hypothesis>=6.100",
  "build>=1.2",
]

[project.scripts]
# Primary entry points (post-rename 2026-04-26). `cot-suite` mirrors
# the PyPI distribution name; `cotsuite` is the compact alias.
cot-suite = "cotsuite.cli:app"
cotsuite = "cotsuite.cli:app"
# Legacy aliases kept for 90 days after each rename. Each emits a
# DeprecationWarning on first import. Removal target: 2026-07-26.
cot-monitor = "cotmon.cli:app"
cotmon = "cotmon.cli:app"
# Even older legacy alias from the pre-cot-monitor era (2026-04-21).
cotdiv = "cotdiv.cli:app"

[project.entry-points.inspect_ai]
# Inspect AI auto-discovers external scorer/solver/task packages via
# this entry-point group. Importing ``cotsuite.inspect`` fires every
# `@scorer(...)` decorator and populates Inspect's process-global
# registry, so `inspect eval some_task --scorer cotsuite/cot_legibility_coverage`
# works after `pip install cot-suite` without further setup.
cotsuite = "cotsuite.inspect"

[project.urls]
Homepage = "https://github.com/thenerd31/cot-suite"
Repository = "https://github.com/thenerd31/cot-suite"
Issues = "https://github.com/thenerd31/cot-suite/issues"

# ---------------------------------------------------------------------------
# Build / versioning
# ---------------------------------------------------------------------------
# Version is derived from the latest git tag via hatch-vcs. Local
# scheme is suppressed (`no-local-version`) so dev builds produce
# strings like `0.1.0a1.dev3` rather than `0.1.0a1.dev3+g<sha>`. The
# trailing `+local` suffix is incompatible with PyPI uploads, so
# `no-local-version` is required for the trusted-publisher release
# pipeline. Match Petri's convention.
[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.hatch.build.hooks.vcs]
version-file = "src/cotsuite/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/cotsuite", "src/cotmon", "src/cotdiv"]

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "README.md", "LICENSE", "pyproject.toml"]

# ---------------------------------------------------------------------------
# Lint / format (ruff)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
# Auto-generated by hatch-vcs at install/build time; excluded from
# both lint and format because the generated content varies and can
# fail `ruff format --check` in CI even when the source tree is clean.
# gmean.py is vendored verbatim from openai/monitorability-evals (Apache-2.0)
# and must stay byte-identical to upstream; linting/formatting it would rewrite
# its bytes and break the resync drift check. See scripts/resync_gmean.py.
extend-exclude = ["src/cotsuite/_version.py", "src/cotsuite/metrics/gmean.py"]

[tool.ruff.lint]
select = ["E", "W", "F", "D", "I", "B", "SIM"]
# E501 — line length is enforced by the formatter, not the linter
# D203/D213 — pydocstyle requires picking one convention per pair;
#             we choose D211 (no-blank-line-before-class) and D212
#             (multi-line summary on first line) by ignoring the
#             alternatives.
ignore = ["E501", "D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests can skip docstring rules — test names are documentation.
"tests/**" = ["D"]
# Scripts are ad-hoc CLI entry-points; full Google docstrings are
# overkill. We keep module-level docstrings via D100 by exempting
# only function/class-level rules.
"scripts/**" = ["D101", "D102", "D103", "D104", "D105", "D107"]
# D-rule strictness is scoped to the v0.1 *public API surface* — the
# same modules that get strict mypy treatment in [[tool.mypy.overrides]]:
# top-level cotsuite, inspect/, inspect/scorers/{legibility_coverage,
# post_hoc_rationalization, chen_cue_injection}, inspect/solvers/cue_injection,
# autoraters/legibility_coverage, core/trajectory.
# Everything else is internal scaffolding and gets function/class-level
# docstring-rule exemption (module-level D100 is still enforced).
"src/cotsuite/cli.py" = ["D101", "D102", "D103", "D105", "D107"]
"src/cotsuite/verify_keys.py" = ["D101", "D102", "D103", "D105", "D107"]
"src/cotsuite/core/classify.py" = ["D101", "D102", "D103", "D105", "D107"]
"src/cotsuite/core/provenance.py" = ["D101", "D102", "D103", "D105", "D107"]
"src/cotsuite/core/registry.py" = ["D101", "D102", "D103", "D105", "D107"]
"src/cotsuite/core/schemas.py" = ["D101", "D102", "D103", "D105", "D107"]
"src/cotsuite/models/clients.py" = ["D101", "D102", "D103", "D105", "D107"]
"src/cotsuite/adapters/**" = ["D101", "D102", "D103", "D105", "D107", "D205", "D209", "D301", "D403", "D417"]
"src/cotsuite/tests/**" = ["D101", "D102", "D103", "D105", "D107", "D205", "D209", "D301", "D403", "D417"]
"src/cotsuite/autoraters/**" = ["D101", "D102", "D103", "D105", "D107", "D205", "D209", "D301", "D403", "D417"]
# Internal _-prefixed modules don't need full docstrings on every
# helper (they're internal API).
"src/cotsuite/inspect/_safety.py" = ["D102", "D103"]
# Modal sibling files are infrastructure scaffolds; module-level
# docstrings only.
"src/cotsuite/**/_*.py" = ["D102", "D103", "D107"]
# Compatibility shims (cotmon, cotdiv) are deprecated wrappers; the
# warnings + module docstrings are sufficient.
"src/cotmon/**" = ["D"]
"src/cotdiv/**" = ["D"]
# Auto-generated by hatch-vcs.
"src/cotsuite/_version.py" = ["D"]

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# Type checking (mypy)
# ---------------------------------------------------------------------------
# Default mypy mode is intentionally lenient — the codebase is
# research code with rapid iteration. Strictness is only enforced on
# the v0.1 *public API surface* (the modules users import and the
# Inspect-facing scorer signatures). This is the Petri-pattern
# trade-off: type safety where users feel it, latitude elsewhere.
[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

# Strict on the v0.1 public surface only.
[[tool.mypy.overrides]]
module = [
  "cotsuite",
  "cotsuite.inspect",
  "cotsuite.inspect.scorers",
  "cotsuite.inspect.scorers.legibility_coverage",
  "cotsuite.inspect.scorers.post_hoc_rationalization",
  "cotsuite.inspect.scorers.chen_cue_injection",
  "cotsuite.inspect.solvers",
  "cotsuite.inspect.solvers.cue_injection",
  "cotsuite.autoraters.legibility_coverage",
  "cotsuite.core.trajectory",
]
strict = true
warn_return_any = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  "vllm.*",
  "nnsight.*",
  "transformer_lens.*",
  "datasets.*",
  "modal.*",
  "huggingface_hub.*",
  "nltk.*",
  "twine.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Test runner (pytest + xdist + cov)
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
# `-n auto` parallelizes via pytest-xdist (one worker per CPU). The
# 103 tests run in ~3s serial / ~1s parallel on a typical laptop.
# `--cov=cotsuite` runs in parallel-safe mode under xdist.
addopts = "-ra --strict-markers --cov=cotsuite --cov-report=term-missing -n auto"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "slow: marks tests requiring API calls or GPU",
  "integration: end-to-end benchmark tests",
]

# Coverage config — exclude generated + shim modules so the report is
# meaningful.
[tool.coverage.run]
source = ["cotsuite"]
omit = [
  "src/cotsuite/_version.py",
  "src/cotmon/**",
  "src/cotdiv/**",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
